generate GCLog based on config; download GCLog; validate; #245