@@ -68,6 +68,7 @@ public class RegressionUtilities {
 	public static final String JVM_OPTIONS_PARAMETER_STRING = "-Xmx%dg -Xms%dg -XX:+UnlockExperimentalVMOptions " +
 			"-XX:+UseZGC -XX:ConcGCThreads=14 -XX:ZMarkStackSpaceLimit=16g -XX:+UseLargePages " +
 			"-XX:MaxDirectMemorySize=%dg";
+	public static final String JVM_OPTIONS_GC_LOG = "-Xlog:gc*:gc.log –XX:+PrintGCDetails -XX:+PrintGCDateStamps";
 	public static final String GET_TOTAL_MB_MEMORY_ON_NODE = "vmstat -s -SM | head -n1 | awk '{ printf  \"%10s\\n\", " +
 			"$1 }' | sed 's/^[[:space:]]*//g'";
 	/* this section is for dynamic allocation of huge pages and memory of instances */
@@ -333,7 +334,8 @@ public class RegressionUtilities {
 		//returnIterator.add("stream_*");
 		returnIterator.add("postgres_reports"); // badgerized web summaries
 		returnIterator.add("latest_postgres*"); // raw log files(s)
-
+		// download GC log
+		returnIterator.add("gc*.log");
 		if (configSpecifiedFiles != null) {
 			returnIterator.addAll(configSpecifiedFiles);
 		}
